test/functions/iterators/bradc/badzip/arrayZipMismatch2.good
arrayZipMismatch2.chpl:3: error: zippering iterators of incompatible size
